--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@babel/core": "^7.0.0-beta.51",
     "@babel/preset-env": "^7.0.0-beta.51",
     "@types/jest": "^23.3.10",
+    "awesome-typescript-loader": "^5.2.1",
     "babel-eslint": "^8.0.3",
     "babel-loader": "^8.0.0-beta.4",
     "babel-plugin-add-module-exports": "^0.2.1",
@@ -44,6 +45,7 @@
     "jest": "^23.6.0",
     "jsdom": "11.11.0",
     "jsdom-global": "3.0.2",
+    "source-map-loader": "^0.2.4",
     "ts-jest": "^23.10.5",
     "ts-loader": "^5.3.1",
     "typescript": "^3.2.2",
