--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-plugin-istanbul": "^5.1.0",
     "babel-preset-env": "^7.0.0-beta.3",
     "babel-register": "^7.0.0-beta.3",
+    "coveralls": "^3.0.2",
     "cross-env": "^5.2.0",
     "eslint": "^5.0.1",
     "eslint-config-react-app": "^3.0.5",
