--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,15 @@
     "outDir": "./lib/",
     "sourceMap": true,
     "noImplicitAny": false,
-    "target": "es2017",
     "jsx": "react",
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "target": "es5",
+    "downlevelIteration": true,
+    "lib": [
+      "es2019"
+    ]
   },
   "include": [
     "./src/**/*"
