Continue DSL: - Component to query

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "target": "es5",
     "downlevelIteration": true,
     "lib": [
-      "es2019"
+      "es2019", "dom"
     ]
   },
   "include": [
