--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "moduleResolution": "node",
     "target": "es5",
     "downlevelIteration": true,
+    "declaration": true,
     "lib": [
       "es2019", "dom"
     ]
